# Lightweight-Charts-Python-GitHub

./: .gitignore  LICENSE  Lightweight-Charts-Python.code-workspace  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  showcase.py  test_installation.py  test_vispy_integration.py
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  MULTI_PANE_GUIDE.md  PROJECT_STATUS.md  TUTORIAL.md
examples/: advanced_styling.py  area_chart.py  basic_line_chart.py  candlestick_chart.py  crosshair_interactive.py  crosshair_markers.py  fullscreen_chart.py  indicators_complete.py  kraken_live_chart.py  kraken_realtime.py  maximized_window.py  multi_pane_chart.py  multi_pane_complete.py  multi_pane_simple.py  multiple_series.py  price_scale_demo.py  real_time_updates.py  volume_histogram.py
src/: __init__.py  base_series.py  chart_model.py  delegates.py  line_series.py  price_scale.py  time_data.py  time_scale.py  vispy_chart.py
src/lightweight_charts/: __init__.py  chart.py  crosshair.py  data_types.py  indicators.py  pane.py  price_scale_visual.py  scales.py  series.py  utils.py
tests/: __init__.py  debug_camera.py  debug_crosshair.py  debug_events.py  test_chart.py  test_crosshair.py  test_crosshair_debug.py  test_crosshair_detachment.py  test_crosshair_full_chart.py  test_crosshair_scroll.py  test_dashed_crosshair.py  test_dashed_verify.py  test_improvements.py  test_multi_pane.py  test_price_scale.py  test_scales.py  test_series.py  test_timer.py
